WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184483
Don't have selections get stuck in editable elements
https://bugs.webkit.org/show_bug.cgi?id=184483
Summary
Don't have selections get stuck in editable elements
Megan Gardner
Reported
2018-04-10 20:23:34 PDT
Don't have selections get stuck in editable elements
Attachments
Patch
(1.94 KB, patch)
2018-04-10 20:27 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2018-04-10 20:27:09 PDT
Created
attachment 337671
[details]
Patch
Megan Gardner
Comment 2
2018-04-10 20:27:43 PDT
<
rdar://problem/35189283
>
Sam Weinig
Comment 3
2018-04-10 22:27:11 PDT
Is this something that can be tested?
Timothy Hatcher
Comment 4
2018-04-11 07:40:59 PDT
Comment on
attachment 337671
[details]
Patch Same comment as Sam. Maybe testing can be done with an API test?
Sam Weinig
Comment 5
2018-04-11 13:27:02 PDT
Or a new test type that dumps selection state/info?
Megan Gardner
Comment 6
2018-04-12 11:23:57 PDT
The selection tests don't seem to be working right in content editable. I will investigate this soon and add some tests later.
WebKit Commit Bot
Comment 7
2018-04-12 11:50:38 PDT
Comment on
attachment 337671
[details]
Patch Clearing flags on attachment: 337671 Committed
r230588
: <
https://trac.webkit.org/changeset/230588
>
WebKit Commit Bot
Comment 8
2018-04-12 11:50:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug